fix: layout shift in mobile safary, schedule

--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -1,6 +1,6 @@
 .main {
   margin: 170px 0 0; /*Header hight*/
-  height: calc(100vh - 170px); /*Header hight*/
+  height: calc((var(--vh, 1vh) * 100) - 170px); /*Header hight*/
   overflow-y: scroll;
   overflow-x: hidden;
   /* background-color: rgba(0, 0, 0, 0.4); */
